# newpackage

./: .gitignore  LICENSE  README.md  pyproject.toml
src/newpackage/: cli.py
src/newpackage/_templates/: GITIGNORE.txt  PYPROJECT.txt  README.txt
